# inference-as-code

./: .gitignore  AGENTS.md  README.md  constitution.md
bench/: benchmark.py  pyproject.toml
bench/results/: 20260707-141012.csv  20260708-004650.csv
chess-agent-lab/: README.md  pyproject.toml  requirements.txt
chess-agent-lab/agents/: orchestrator.py  worker_stockfish.py
chess-agent-lab/tests/: test_worker_stockfish.py
configs/: ollama-override.conf
docs/: 01-install.md  02-network.md  03-access.md  04-inference.md  05-agentic-framework.md  06-service-persistence.md  07-benchmarks.md  scripts.md
scripts/: 01-base-setup.sh  02-firewall.sh  03-ssh-harden.sh  04-ollama.sh  05-chess-agent-setup.sh  06-bench-setup.sh
