[project]
name = "chess-agent-lab"
version = "0.1.0"
description = "Local-LLM chess analysis agent built on the inference-as-code lab"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph==1.2.7",
    "langchain==1.3.11",
    "langchain-community==0.4.2",
    "crewai==1.15.1",
    "ollama==0.6.2",
    "duckdb==1.5.4",
    "chess==1.11.2",
]
