[project]
name = "chess-agent-lab"
version = "0.1.0"
description = "Local-LLM chess analysis agent built on the inference-as-code lab"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langgraph==1.2.7",
    "langchain==1.3.11",
    "langchain-community==0.4.2",
    "crewai==1.15.1",
    "ollama==0.6.2",
    "duckdb==1.5.4",
    "chess==1.11.2",
]

[tool.uv]
# crewai pulls in chromadb>=1.0.0, every version of which (up to the current
# latest, 1.5.9) has a critical unpatched pre-auth RCE (GHSA via Dependabot).
# Force the last pre-1.0 release instead — outside the affected range, and
# crewai still imports fine against it (verified). See docs/05-agentic-framework.md.
override-dependencies = ["chromadb<1.0.0"]
